--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "dependencies": {
-    "ffi-napi": "^4.0.3"
+    "express": "^4.18.2",
+    "ffi-napi": "^4.0.3",
+    "ws": "^8.13.0"
   },
   "name": "remote-taskmgr",
   "version": "1.0.0",
   "description": "A remote, React-based task manager that helps you manage processes on your computer from the web. (It can help you big time when your video game crashes and it's near-impossible to close it)",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
