--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "ffi-napi": "^4.0.3",
-    "ws": "^8.13.0"
-  },
   "name": "remote-taskmgr",
-  "version": "1.0.0",
-  "description": "A remote, React-based task manager that helps you manage processes on your computer from the web. (It can help you big time when your video game crashes and it's near-impossible to close it)",
-  "main": "server.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hashXen/remote-taskmgr.git"
-  },
-  "keywords": [
-    "react",
-    "taskmgr",
-    "admin",
-    "remote"
-  ],
-  "author": "hashXen",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hashXen/remote-taskmgr/issues"
-  },
-  "homepage": "https://github.com/hashXen/remote-taskmgr#readme"
+  "dependencies": {
+    "@types/node": "20.2.1",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.2",
+    "next": "13.4.2",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "tsc": "^2.0.4",
+    "typescript": "5.0.4"
+  }
 }
